cambio persona e historial modificacion

--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -45,65 +45,6 @@ InstitucionLabel=Instituci\u00f3n:
 PersonasLabel=Persona:
 
 
-ListCambiopersonaTitle=Cambios en Persona
-ViewCambiopersonaTitle=Mostrar Cambio en Persona
-ListCambiopersonaEmpty=(No se encontraron Cambios)
-CambiopersonaLabel_idcp=Id:
-CambiopersonaTitle_idcp=Id
-CambiopersonaLabel_operation=Operaci\u00f3n:
-CambiopersonaTitle_operation=Operaci\u00f3n
-CambiopersonaLabel_fecha=Fecha:
-CambiopersonaTitle_fecha=Fecha
-CambiopersonaLabel_tipo=Tipo:
-CambiopersonaTitle_tipo=Tipo
-CambiopersonaLabel_curp=Curp:
-CambiopersonaTitle_curp=Curp
-CambiopersonaLabel_nombre=Nombre:
-CambiopersonaTitle_nombre=Nombre
-CambiopersonaLabel_apellidop=ApellidoP:
-CambiopersonaTitle_apellidop=ApellidoP
-CambiopersonaLabel_apellidom=ApellidoM:
-CambiopersonaTitle_apellidom=ApellidoM
-CambiopersonaLabel_grado=Grado:
-CambiopersonaTitle_grado=Grado
-CambiopersonaLabel_cargo=Cargo:
-CambiopersonaTitle_cargo=Cargo
-CambiopersonaLabel_correo1=Correo1:
-CambiopersonaTitle_correo1=Correo1
-CambiopersonaLabel_correo2=Correo2:
-CambiopersonaTitle_correo2=Correo2
-CambiopersonaLabel_correo3=Correo3:
-CambiopersonaTitle_correo3=Correo3
-CambiopersonaLabel_telefono=Telefono:
-CambiopersonaTitle_telefono=Telefono
-CambiopersonaLabel_domicilioOficina=DomicilioOficina:
-CambiopersonaTitle_domicilioOficina=DomicilioOficina
-CambiopersonaLabel_telpersonal=Telpersonal:
-CambiopersonaTitle_telpersonal=Telpersonal
-CambiopersonaLabel_dompersonal=Dompersonal:
-CambiopersonaTitle_dompersonal=Dompersonal
-CambiopersonaLabel_idpersona=Idpersona:
-CambiopersonaTitle_idpersona=Idpersona
-CambiopersonaLabel_idinstitucion=Idinstitucion:
-CambiopersonaTitle_idinstitucion=Idinstitucion
-
-
-ListHistdesignagestorTitle=Historial Designador-Gestor
-ViewHistdesignagestorTitle=Mostrar Historial
-ListHistdesignagestorEmpty=(No se encontro el historial)
-HistdesignagestorLabel_idhdg=Id:
-HistdesignagestorTitle_idhdg=Id
-HistdesignagestorLabel_fechaInicio=FechaInicio:
-HistdesignagestorTitle_fechaInicio=FechaInicio
-HistdesignagestorLabel_fechaFin=FechaFin:
-HistdesignagestorTitle_fechaFin=FechaFin
-HistdesignagestorLabel_status=Status:
-HistdesignagestorTitle_status=Status
-HistdesignagestorLabel_iddesigna=Iddesigna:
-HistdesignagestorTitle_iddesigna=Iddesigna
-HistdesignagestorLabel_gestor=Gestor:
-HistdesignagestorTitle_gestor=Gestor
-
 DependenciasCreated=La Dependencia se cre\u00f3 con \u00e9xito.
 DependenciasUpdated=La Dependencia se modific\u00f3 con \u00e9xito.
 DependenciasDeleted=La Dependencia se elimin\u00f3 con \u00e9xito.
@@ -236,6 +177,48 @@ PersonasTitle_nombramiento=NOMBRAMIENTO
 PersonasLabel_idinstitucion=Id Institucion:
 PersonasTitle_idinstitucion=Id Institucion
 
+ListCambiopersonaTitle=Cambios en Persona
+ViewCambiopersonaTitle=Mostrar Cambio en Persona
+ListCambiopersonaEmpty=(No se encontraron Cambios)
+CambiopersonaLabel_idcp=Id:
+CambiopersonaTitle_idcp=Id
+CambiopersonaLabel_operation=Operaci\u00f3n:
+CambiopersonaTitle_operation=Operaci\u00f3n
+CambiopersonaLabel_fecha=Fecha:
+CambiopersonaTitle_fecha=Fecha
+CambiopersonaLabel_tipo=Tipo:
+CambiopersonaTitle_tipo=Tipo
+CambiopersonaLabel_curp=Curp:
+CambiopersonaTitle_curp=Curp
+CambiopersonaLabel_nombre=Nombre:
+CambiopersonaTitle_nombre=Nombre
+CambiopersonaLabel_apellidop=Apellido Paterno:
+CambiopersonaTitle_apellidop=Apellido Paterno
+CambiopersonaLabel_apellidom=Apellido Materno:
+CambiopersonaTitle_apellidom=Apellido Materno
+CambiopersonaLabel_grado=Grado:
+CambiopersonaTitle_grado=Grado
+CambiopersonaLabel_cargo=Cargo:
+CambiopersonaTitle_cargo=Cargo
+CambiopersonaLabel_correo1=Correo Institucional 1:
+CambiopersonaTitle_correo1=Correo Institucional 1
+CambiopersonaLabel_correo2=Correo Institucional 2:
+CambiopersonaTitle_correo2=Correo Institucional 2
+CambiopersonaLabel_correo3=Correo Personal:
+CambiopersonaTitle_correo3=Correo Personal
+CambiopersonaLabel_telefono=Tel\u00e9fono:
+CambiopersonaTitle_telefono=Tel\u00e9fono
+CambiopersonaLabel_domicilioOficina=Domicilio de Oficina:
+CambiopersonaTitle_domicilioOficina=Domicilio de Oficina
+CambiopersonaLabel_telpersonal=Tel\u00e9fono Personal:
+CambiopersonaTitle_telpersonal=Tel\u00e9fono Personal
+CambiopersonaLabel_dompersonal=Domicilio Personal:
+CambiopersonaTitle_dompersonal=Domicilio Personal
+CambiopersonaLabel_idpersona=Id Persona:
+CambiopersonaTitle_idpersona=Id persona
+CambiopersonaLabel_idinstitucion=Instituci\u00f3n:
+CambiopersonaTitle_idinstitucion=Instituci\u00f3n
+
 GestoresCreated=El Gestor se cre\u00f3 con \u00e9xito.
 GestoresUpdated=El Gestor se modific\u00f3 con \u00e9xito.
 GestoresDeleted=El Gestor se elimin\u00f3 con \u00e9xito.
@@ -290,6 +273,22 @@ GestoresLabel_estado=Estado:
 GestoresTitle_estado=Estado
 GestoresLabel_municipio=Municipio:
 GestoresTitle_municipio=Municipio
+
+ListHistdesignagestorTitle=Historial Designador-Gestor
+ViewHistdesignagestorTitle=Mostrar Historial
+ListHistdesignagestorEmpty=(No se encontro el historial)
+HistdesignagestorLabel_idhdg=Id:
+HistdesignagestorTitle_idhdg=Id
+HistdesignagestorLabel_fechaInicio=Inicio:
+HistdesignagestorTitle_fechaInicio=Inicio
+HistdesignagestorLabel_fechaFin=Fin:
+HistdesignagestorTitle_fechaFin=Fin
+HistdesignagestorLabel_status=Status:
+HistdesignagestorTitle_status=Status
+HistdesignagestorLabel_iddesigna=Designador:
+HistdesignagestorTitle_iddesigna=Designador
+HistdesignagestorLabel_gestor=Gestor:
+HistdesignagestorTitle_gestor=Gestor
 
 RatificacionesCreated=La ratificaci\u00f3n se cre\u00f3 con \u00e9xito.
 RatificacionesUpdated=La ratificaci\u00f3n se modific\u00f3 con \u00e9xito.
