--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -1,4 +1,5 @@
 PersistenceErrorOccured=A persistence error occurred.
+ViewHD=Historial Designador
 Create=Crear
 View=Mostrar
 Edit=Editar
@@ -20,6 +21,11 @@ BotonYes=Si
 BotonNo=No
 MsjConfirmacion=\u00bfEstas seguro de realizar esta acci\u00f3n?
 Confirmacion=Confirmaci\u00f3n
+BotonCambioPersonaGestor=Muestra los cambios hechos al Gestor
+BotonCambioPersonaDesignador=Muestra los cambios hechos al Designador
+BotonEditarPersonaGestor=Edita datos del Gestor
+BotonEditarPersonaDesignador=Edita datos del Designador
+BotonHistorialDesignador=Muestra el Historial de Designadores del gestor
 
 ImagenesPanel=Selecciona las im\u00e1genes correspondientes
 PersonasGDPanel=Detalles del Designador y del Gestor
