--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -65,9 +65,11 @@ DependenciasRequiredMessage_iddependencia=Es necesario ingresar el Id Dependenci
 DependenciasLabel_siglas=Siglas:
 DependenciasTitle_siglas=Siglas
 DependenciasRequiredMessage_siglas=Es necesario ingresar las siglas.
+DependenciasRequiredMessage_siglas:Las siglas : numero de caracteres [2-30],solo mayusculas, no caracteres especiales  solo .- 
 DependenciasLabel_nombre=Nombre:
 DependenciasTitle_nombre=Nombre
 DependenciasRequiredMessage_nombre=Es necesario ingresar el Nombre.
+DependenciasRequiredMessage_nombre:El nombre : minimo 8 caracteres,solo mayusculas, no caracteres especiales solo acepta .-
 
 OrganismosCreated=El organismo se cre\u00f3 con \u00e9xito.
 OrganismosUpdated=El organismo se modific\u00f3 con \u00e9xito.
@@ -293,8 +295,8 @@ HistdesignagestorLabel_status=Status:
 HistdesignagestorTitle_status=Status
 HistdesignagestorLabel_iddesigna=Designador:
 HistdesignagestorTitle_iddesigna=Designador
-HistdesignagestorLabel_gestor=Gestor:
-HistdesignagestorTitle_gestor=Gestor
+HistdesignagestorLabel_gestor=Usuario:
+HistdesignagestorTitle_gestor=Usuario
 
 RatificacionesCreated=La ratificaci\u00f3n se cre\u00f3 con \u00e9xito.
 RatificacionesUpdated=La ratificaci\u00f3n se modific\u00f3 con \u00e9xito.
