editar tema, proyecto, observaciones. cancelar y terminar solicitudes en controlsolicitudes

--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -1061,3 +1061,4 @@ EditControlsolicitudesAsignarResponsable=Asignar Rsponsable
 AsignarSolicitud= Asignar Solicitud
 Aceptar=Aceptar
 Solicitud=Solicitud
+Estadosolicitud=Estado de la solicitud
