--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -1062,3 +1062,4 @@ AsignarSolicitud= Asignar Solicitud
 Aceptar=Aceptar
 Solicitud=Solicitud
 Estadosolicitud=Estado de la solicitud
+IniciarNota=Iniciar nota 
