--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,11 @@
                 <artifactId>poi</artifactId>
                 <version>3.7</version>
         </dependency>
+      <dependency>
+		<groupId>com.lowagie</groupId>
+		<artifactId>itext</artifactId>
+		<version>2.1.0</version>
+	</dependency>
     </dependencies>
 
     <build>
