--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -48,6 +48,12 @@ PersonaTitle=Personas
 GestorTitle=Gestor
 UsuarioTitle=Usuario
 
+ReporteProcesadasTitle=Reporte de Im\u00e1genes Procesadas
+ReporteRecibidasTitle=Reporte de Im\u00e1genes Recibidas
+ReporteEntregadasTitle=Reporte de Im\u00e1genes Entregadas
+TotalImagenes=TOTAL DE IM\u00c1GENES:
+NoImagenes=NO. DE IM\u00c1GENES
+Satelite=SAT\u00c9LITE
 DependenciaLabel=Dependencia:
 OrganismoLabel=Organismo:
 InstitucionLabel=Instituci\u00f3n:
