MODIFICACIONES gestores,ratificaciones y personas

--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -140,7 +140,7 @@ PersonasTitle_curp=CURP
 PersonasValidatorMessage_curp:La CURP no es valida o debe estar vacia 
 PersonasLabel_nombre=Nombre:
 PersonasTitle_nombre=Nombre 
-PersonasRequiredMessage_nombre:Es necesario ingresar el nombre
+PersonasRequiredMessage_nombre:Es necesario ingresar el Nombre
 PersonasValidatorMessage_nombre:El nombre no debe contener caracteres especiales como $,%,^ solo acepta .-
 PersonasLabel_apellidop=Apellido Paterno:
 PersonasTitle_apellidop=Apellido Paterno
@@ -148,11 +148,14 @@ PersonasRequiredMessage_apellidop:Es necesario ingresar el Apellido Paterno
 PersonasValidatorMessage_apellidop:El Apellido Paterno no debe contener caracteres especiales como $,%,^ solo acepta .-
 PersonasLabel_apellidom=Apellido Materno:
 PersonasTitle_apellidom=Apellido Materno
+PersonasRequiredMessage_apellidom:Es necesario ingresar el Apellido Materno
 PersonasValidatorMessage_apellidom:El Apellido Materno no debe contener caracteres especiales como $,%,^ solo acepta .-
 PersonasLabel_grado=Grado:
 PersonasTitle_grado=Grado
+PersonasRequiredMessage_grado:Es necesario ingresar el Grado
 PersonasLabel_cargo=Cargo:
 PersonasTitle_cargo=Cargo
+PersonasRequiredMessage_cargo:Es necesario ingresar el Cargo
 PersonasLabel_correo1=Correo Institucional 1:
 PersonasTitle_correo1=Correo Institucional 1
 PersonasRequiredMessage_correo1:Es necesario ingresar el Correo Institucional 1
@@ -163,12 +166,14 @@ PersonasValidatorMessage_correo2=El Correo Institucional 2 no es valido o debe e
 PersonasLabel_correo3=Correo Personal:
 PersonasTitle_correo3=Correo Personal
 PersonasValidatorMessage_correo3=El Correo Personal no es valido o debe estar vacia
-PersonasLabel_telefono=Tel\u00e9fono:
-PersonasTitle_telefono=Tel\u00e9fono
+PersonasLabel_telefono=Tel\u00e9fono 1:
+PersonasTitle_telefono=Tel\u00e9fono 1
+PersonasRequiredMessage_telefono:Es necesario ingresar el Tel\u00e9fono 1
 PersonasLabel_domicilioOficina=Domicilio de Oficina:
 PersonasTitle_domicilioOficina=Domicilio de Oficina
-PersonasLabel_telpersonal=Tel\u00e9fono Personal:
-PersonasTitle_telpersonal=Tel\u00e9fono Personal
+PersonasRequiredMessage_domicilioOficina:Es necesario ingresar el Domicilio
+PersonasLabel_telpersonal=Tel\u00e9fono 2:
+PersonasTitle_telpersonal=Tel\u00e9fono 2
 PersonasLabel_dompersonal=Domicilio Personal:
 PersonasTitle_dompersonal=Domicilio Personal
 PersonasLabel_idoficialanv=Identificaci\u00f3n Oficial Anv: 
@@ -280,6 +285,8 @@ GestoresLabel_idpersona=Gestor:
 GestoresTitle_idpersona=Gestor
 GestoresLabel_designador=Designador:
 GestoresTitle_designador=Designador
+GestoresTitle_comentarios=Comentarios:
+GestoresLabel_comentarios=Comentarios
 GestoresLabel_idorganismo=Idorganismo:
 GestoresTitle_idorganismo=Idorganismo
 GestoresLabel_descripcion1=Descripcion1:
@@ -351,20 +358,16 @@ ProcesoratificacionLabel_cambios=Cambios:
 ProcesoratificacionTitle_cambios=Cambios
 ProcesoratificacionLabel_status=Status:
 ProcesoratificacionTitle_status=Status
-ProcesoratificacionLabel_comentarios=Comentarios:
-ProcesoratificacionTitle_comentarios=Comentarios
 ProcesoratificacionLabel_fechaEnvioclaves=Envio de claves:
 ProcesoratificacionTitle_fechaEnvioclaves=Envio de claves
 ProcesoratificacionLabel_fechaConficlaves=Confirmaci\u00f3n de claves:
 ProcesoratificacionTitle_fechaConficlaves=Confirmaci\u00f3n de claves
-ProcesoratificacionLabel_proceso=Proceso:
-ProcesoratificacionTitle_proceso=Proceso
-ProcesoratificacionLabel_documentacion=Documentaci\u00f3n:
-ProcesoratificacionTitle_documentacion=Documentaci\u00f3n
+ProcesoratificacionLabel_observaciones=Observaciones:
+ProcesoratificacionTitle_observaciones=Observaciones
 ProcesoratificacionLabel_idratificacion=Id Ratificaci\u00f3n:
 ProcesoratificacionTitle_idratificacion=Id Ratificaci\u00f3n
-ProcesoratificacionLabel_gestor=Gestor:
-ProcesoratificacionTitle_gestor=Gestor
+ProcesoratificacionLabel_gestor=Usuario:
+ProcesoratificacionTitle_gestor=Usuario
 
 ControlsolicitudesCreated=Controlsolicitudes was successfully created.
 ControlsolicitudesUpdated=Controlsolicitudes was successfully updated.
