--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -198,6 +198,7 @@ PersonasLabel_nombramiento=Nombramiento:
 PersonasTitle_nombramiento=NOMBRAMIENTO
 PersonasLabel_idinstitucion=Id Institucion:
 PersonasTitle_idinstitucion=Id Institucion
+PersonasTitle_usuarios=Usuario
 
 ListCambiopersonaTitle=Cambios en Persona
 ViewCambiopersonaTitle=Mostrar Cambio en Persona
