--- a/pom.xml
+++ b/pom.xml
@@ -51,15 +51,34 @@
 	<dependency>
                 <groupId>org.apache.poi</groupId>
                 <artifactId>poi</artifactId>
-                <version>3.7</version>
+                <version>3.11</version>
         </dependency>
+	<dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi-ooxml</artifactId>
+                <version>3.11</version>
+        </dependency>
+	<dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi-ooxml-schemas</artifactId>
+                <version>3.11</version>
+        </dependency>
+	<dependency>
+                <groupId>org.apache.xmlbeans</groupId>
+                <artifactId>xmlbeans</artifactId>
+                <version>2.6.0</version>
+        </dependency>
+	<dependency>
+                <groupId>org.dom4j</groupId>
+                <artifactId>dom4j</artifactId>
+                <version>2.0.0-RC1</version>
+        </dependency>                         
       <dependency>
 		<groupId>com.lowagie</groupId>
 		<artifactId>itext</artifactId>
 		<version>2.1.0</version>
 	</dependency>
-    </dependencies>
-
+ </dependencies>
     <build>
         <plugins>
             <plugin>
