MODIFICACIONES EDIT EN PROCESO RATIFICACION

--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -26,6 +26,7 @@ MsjConfirmacion=\u00bfEstas seguro de realizar esta acci\u00f3n?
 Confirmacion=Confirmaci\u00f3n
 BotonCambioPersonaGestor=Muestra los cambios hechos al Gestor
 BotonCambioPersonaDesignador=Muestra los cambios hechos al Designador
+BotonEditarPersonaUsuario=Edita datos del Usuario
 BotonEditarPersonaGestor=Edita datos del Gestor
 BotonEditarPersonaDesignador=Edita datos del Designador
 BotonHistorialDesignador=Muestra el Historial de Designadores del gestor
