--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -1074,3 +1074,7 @@ Aceptar=Aceptar
 Solicitud=Solicitud
 Estadosolicitud=Estado de la solicitud
 IniciarNota=Iniciar nota 
+CrearNota=Crear Nota
+VerImg=Ver imagenes
+fechaAcuse=Acusse
+fechaOficio=Oficio
