--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -1076,5 +1076,14 @@ Estadosolicitud=Estado de la solicitud
 IniciarNota=Iniciar nota 
 CrearNota=Crear Nota
 VerImg=Ver imagenes
-fechaAcuse=Acusse
-fechaOficio=Oficio
+
+fechaAcuseNota=Acusse
+fechaOficioNota=Oficio
+crearNota=Crear nueva Nota
+idNota=Indentificador:
+nombreNota=Nombre:
+noImgNota=No. Imagenes:
+noNota=No, de Nota:
+fechaCreateNota=Fecha de creaci\u00f3n:
+observacionNota=Observaciones:
+dispositivoEntrega=Dispositivo de entrega:
