sesion con seguridad

--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -40,6 +40,7 @@ InformacionTitle=Informaci\u00f3n
 ConfirmacionTitle=Confirmaci\u00f3n
 ImagenesTitle=Im\u00e1genes
 ImagenTitle=Imagen
+RolesTitle=Roles
 
 DependenciaTitle=Dependencia
 OrganismoTitle=Organismo
@@ -370,6 +371,52 @@ ProcesoratificacionLabel_idratificacion=Id Ratificaci\u00f3n:
 ProcesoratificacionTitle_idratificacion=Id Ratificaci\u00f3n
 ProcesoratificacionLabel_gestor=Usuario:
 ProcesoratificacionTitle_gestor=Usuario
+
+PersonalatencionusuariosCreated=El usuario se cre\u00f3 con \u00e9xito.
+PersonalatencionusuariosUpdated=El usuario se modific\u00f3 con \u00e9xito.
+PersonalatencionusuariosDeleted=El usuario se se elimin\u00f3 con \u00e9xito.
+CreatePersonalatencionusuariosTitle=Create Nuevo Usuario
+EditPersonalatencionusuariosTitle=Editar Nuevo Usuario
+ViewPersonalatencionusuariosTitle=Ver Usuario
+ListPersonalatencionusuariosTitle=Lista de Usuarios
+ListPersonalatencionusuariosEmpty=(No se encontraron usuarios)
+PersonalatencionusuariosLabel_nombre=Nombre:
+PersonalatencionusuariosTitle_nombre=Nombre
+PersonalatencionusuariosRequiredMessage_nombre=Es necesario ingresar el Nombre.
+PersonalatencionusuariosLabel_apellidopa=Apellido Paterno:
+PersonalatencionusuariosTitle_apellidopa=Apellido Paterno
+PersonalatencionusuariosRequiredMessage_apellidopa=Es necesario ingresar el Apellido Paterno.
+PersonalatencionusuariosLabel_apellidoma=Apellido Materno:
+PersonalatencionusuariosTitle_apellidoma=Apellido Materno
+PersonalatencionusuariosRequiredMessage_apellidoma=Es necesario ingresar el Apellido Materno.
+PersonalatencionusuariosLabel_telefono=Tel\u00e9fono:
+PersonalatencionusuariosTitle_telefono=Tel\u00e9fono
+PersonalatencionusuariosLabel_correo=Correo:
+PersonalatencionusuariosTitle_correo=Correo
+PersonalatencionusuariosRequiredMessage_correo=Es necesario ingresar el correo.
+PersonalatencionusuariosLabel_puesto=Puesto:
+PersonalatencionusuariosTitle_puesto=Puesto
+PersonalatencionusuariosLabel_usuario=Usuario:
+PersonalatencionusuariosRequiredMessage_usuario=Es necesario ingresar el Usuario.
+PersonalatencionusuariosTitle_usuario=Usuario
+PersonalatencionusuariosLabel_pwd=Constrase\u00f1a:
+PersonalatencionusuariosTitle_pwd=Constrase\u00f1a
+PersonalatencionusuariosRequiredMessage_pwd=Es necesario ingresar la Contrase\u00f1a.
+PersonalatencionusuariosLabel_status=Status:
+PersonalatencionusuariosRequiredMessage_status=Es necesario ingresar el Status.
+PersonalatencionusuariosTitle_status=Status
+PersonalatencionusuariosLabel_atcNormal=Atc-Normal:
+PersonalatencionusuariosTitle_atcNormal=Atc-Normal
+PersonalatencionusuariosLabel_atcGestores=Atc-Gestores:
+PersonalatencionusuariosTitle_atcGestores=Atc-Gestores
+PersonalatencionusuariosLabel_atcRatificacion=Atc-Ratificacion:
+PersonalatencionusuariosTitle_atcRatificacion=Atc-Ratificacion
+PersonalatencionusuariosLabel_reportes=Reportes:
+PersonalatencionusuariosTitle_reportes=Reportes
+PersonalatencionusuariosLabel_usuarios=Usuarios:
+PersonalatencionusuariosTitle_usuarios=Usuarios
+PersonalatencionusuariosLabel_manual=Manual:
+PersonalatencionusuariosTitle_manual=Manual
 
 ControlsolicitudesCreated=Controlsolicitudes was successfully created.
 ControlsolicitudesUpdated=Controlsolicitudes was successfully updated.
@@ -797,98 +844,6 @@ ListNotasTitle_dispotivioentrega=Dispotivioentrega
 ListNotasTitle_idorganismo=Idorganismo
 ListNotasTitle_pwdnota=Pwdnota
 ListNotasTitle_idcontrolsolicitud=Idcontrolsolicitud
-PersonalatencionusuariosCreated=Personalatencionusuarios was successfully created.
-PersonalatencionusuariosUpdated=Personalatencionusuarios was successfully updated.
-PersonalatencionusuariosDeleted=Personalatencionusuarios was successfully deleted.
-CreatePersonalatencionusuariosTitle=Create New Personalatencionusuarios
-CreatePersonalatencionusuariosSaveLink=Save
-CreatePersonalatencionusuariosShowAllLink=Show All Personalatencionusuarios Items
-CreatePersonalatencionusuariosIndexLink=Index
-CreatePersonalatencionusuariosLabel_nombre=Nombre:
-CreatePersonalatencionusuariosTitle_nombre=Nombre
-CreatePersonalatencionusuariosLabel_apellidopa=Apellidopa:
-CreatePersonalatencionusuariosTitle_apellidopa=Apellidopa
-CreatePersonalatencionusuariosLabel_apellidoma=Apellidoma:
-CreatePersonalatencionusuariosTitle_apellidoma=Apellidoma
-CreatePersonalatencionusuariosLabel_telefono=Telefono:
-CreatePersonalatencionusuariosTitle_telefono=Telefono
-CreatePersonalatencionusuariosLabel_correo=Correo:
-CreatePersonalatencionusuariosTitle_correo=Correo
-CreatePersonalatencionusuariosLabel_puesto=Puesto:
-CreatePersonalatencionusuariosTitle_puesto=Puesto
-CreatePersonalatencionusuariosLabel_usuario=Usuario:
-CreatePersonalatencionusuariosRequiredMessage_usuario=The Usuario field is required.
-CreatePersonalatencionusuariosTitle_usuario=Usuario
-CreatePersonalatencionusuariosLabel_pwd=Pwd:
-CreatePersonalatencionusuariosTitle_pwd=Pwd
-CreatePersonalatencionusuariosLabel_status=Status:
-CreatePersonalatencionusuariosRequiredMessage_status=The Status field is required.
-CreatePersonalatencionusuariosTitle_status=Status
-EditPersonalatencionusuariosTitle=Edit Personalatencionusuarios
-EditPersonalatencionusuariosSaveLink=Save
-EditPersonalatencionusuariosViewLink=View
-EditPersonalatencionusuariosShowAllLink=Show All Personalatencionusuarios Items
-EditPersonalatencionusuariosIndexLink=Index
-EditPersonalatencionusuariosLabel_nombre=Nombre:
-EditPersonalatencionusuariosTitle_nombre=Nombre
-EditPersonalatencionusuariosLabel_apellidopa=Apellidopa:
-EditPersonalatencionusuariosTitle_apellidopa=Apellidopa
-EditPersonalatencionusuariosLabel_apellidoma=Apellidoma:
-EditPersonalatencionusuariosTitle_apellidoma=Apellidoma
-EditPersonalatencionusuariosLabel_telefono=Telefono:
-EditPersonalatencionusuariosTitle_telefono=Telefono
-EditPersonalatencionusuariosLabel_correo=Correo:
-EditPersonalatencionusuariosTitle_correo=Correo
-EditPersonalatencionusuariosLabel_puesto=Puesto:
-EditPersonalatencionusuariosTitle_puesto=Puesto
-EditPersonalatencionusuariosLabel_usuario=Usuario:
-EditPersonalatencionusuariosRequiredMessage_usuario=The Usuario field is required.
-EditPersonalatencionusuariosTitle_usuario=Usuario
-EditPersonalatencionusuariosLabel_pwd=Pwd:
-EditPersonalatencionusuariosTitle_pwd=Pwd
-EditPersonalatencionusuariosLabel_status=Status:
-EditPersonalatencionusuariosRequiredMessage_status=The Status field is required.
-EditPersonalatencionusuariosTitle_status=Status
-ViewPersonalatencionusuariosTitle=View
-ViewPersonalatencionusuariosDestroyLink=Destroy
-ViewPersonalatencionusuariosEditLink=Edit
-ViewPersonalatencionusuariosCreateLink=Create New Personalatencionusuarios
-ViewPersonalatencionusuariosShowAllLink=Show All Personalatencionusuarios Items
-ViewPersonalatencionusuariosIndexLink=Index
-ViewPersonalatencionusuariosLabel_nombre=Nombre:
-ViewPersonalatencionusuariosTitle_nombre=Nombre
-ViewPersonalatencionusuariosLabel_apellidopa=Apellidopa:
-ViewPersonalatencionusuariosTitle_apellidopa=Apellidopa
-ViewPersonalatencionusuariosLabel_apellidoma=Apellidoma:
-ViewPersonalatencionusuariosTitle_apellidoma=Apellidoma
-ViewPersonalatencionusuariosLabel_telefono=Telefono:
-ViewPersonalatencionusuariosTitle_telefono=Telefono
-ViewPersonalatencionusuariosLabel_correo=Correo:
-ViewPersonalatencionusuariosTitle_correo=Correo
-ViewPersonalatencionusuariosLabel_puesto=Puesto:
-ViewPersonalatencionusuariosTitle_puesto=Puesto
-ViewPersonalatencionusuariosLabel_usuario=Usuario:
-ViewPersonalatencionusuariosTitle_usuario=Usuario
-ViewPersonalatencionusuariosLabel_pwd=Pwd:
-ViewPersonalatencionusuariosTitle_pwd=Pwd
-ViewPersonalatencionusuariosLabel_status=Status:
-ViewPersonalatencionusuariosTitle_status=Status
-ListPersonalatencionusuariosTitle=List
-ListPersonalatencionusuariosEmpty=(No Personalatencionusuarios Items Found)
-ListPersonalatencionusuariosDestroyLink=Destroy
-ListPersonalatencionusuariosEditLink=Edit
-ListPersonalatencionusuariosViewLink=View
-ListPersonalatencionusuariosCreateLink=Create New Personalatencionusuarios
-ListPersonalatencionusuariosIndexLink=Index
-ListPersonalatencionusuariosTitle_nombre=Nombre
-ListPersonalatencionusuariosTitle_apellidopa=Apellidopa
-ListPersonalatencionusuariosTitle_apellidoma=Apellidoma
-ListPersonalatencionusuariosTitle_telefono=Telefono
-ListPersonalatencionusuariosTitle_correo=Correo
-ListPersonalatencionusuariosTitle_puesto=Puesto
-ListPersonalatencionusuariosTitle_usuario=Usuario
-ListPersonalatencionusuariosTitle_pwd=Pwd
-ListPersonalatencionusuariosTitle_status=Status
 SolicitudesInternetCreated=SolicitudesInternet was successfully created.
 SolicitudesInternetUpdated=SolicitudesInternet was successfully updated.
 SolicitudesInternetDeleted=SolicitudesInternet was successfully deleted.
